--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
   <div>
     <usertable></usertable>
   </div>
+  <img height=200px src="https://gymkhana.iitb.ac.in/~sports/images/newlogo.png">
 </body>
 
