--- a/src/app/components/usertable/usertable.component.css
+++ b/src/app/components/usertable/usertable.component.css
@@ -31,3 +31,7 @@ mat-row.mat-row.ng-star-inserted
 .mat-row:nth-child(odd){
     background-color:#ffffff;
 }
+.mat-row:hover {
+    background-color: #50C878;
+    font-size: 20px;
+  }
