--- a/src/app/components/usertable/usertable.component.css
+++ b/src/app/components/usertable/usertable.component.css
@@ -1,11 +1,12 @@
 div{
     margin: 20px;
     width: 700px;
-    border-radius: 100px;
+    border-radius: 10px;
     border: 10px;
     border-color: black;
     background-color: white;
     font-size: smaller;
+    pointer-events: all;
 }
 .mat-cell{
     font-size: smaller;
@@ -34,4 +35,60 @@ mat-row.mat-row.ng-star-inserted
 .mat-row:hover {
     background-color: #50C878;
     font-size: 20px;
+  }
+#modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 60px;
+    border-radius: 2%;
+  }
+  .close {
+    /* Position it in the top right corner outside of the modal */
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+  }
+  
+.close:hover,
+.close:focus {
+  color: red;
+  cursor: pointer;
+}
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+  }
+  @-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)}
+    to {-webkit-transform: scale(1)}
+  }
+  
+  @keyframes animatezoom {
+    from {transform: scale(0)}
+    to {transform: scale(1)}
+  }
+  .modal-content {
+    background-color: #fefefe;
+    margin: 5px auto; /* 15% from the top and centered */
+    border: 1px solid #888;
+    width: 40%; /* Could be more or less, depending on screen size */
+  }
+  img{
+      width: 100px;
+      height: 100px;
+  }
+  .info{
+      text-align: center;
+      font-size: small;
   }
