--- a/src/app/components/usertable/usertable.component.html
+++ b/src/app/components/usertable/usertable.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="main">
     <mat-table [dataSource]="dataSource" class="table">
       <ng-container matColumnDef="name">
         <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
