--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,8 @@
 body{
     background-image:url("background.jpg");
 }
-div{
-    background-color: white;
-    border-radius: 10px;
+img{
     position: absolute;
-    top: 100px;
-    left: 600px;
-    width:fit-content ;
+    top: 0;
+    left: 0;
 }
